[package]
name = "rustlibs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustlibs"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"
numpy = "0.21.0"
pyo3 = "0.22.0"
